Bug 359883 - Dolphin crash when I try to delete a folder (Wayland session)
Summary: Dolphin crash when I try to delete a folder (Wayland session)
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.27.0
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: David Faure
URL:
Keywords: drkonqi
: 368390 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-02-28 10:34 UTC by Mustafa Muhammad
Modified: 2016-10-28 09:57 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.28
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mustafa Muhammad 2016-02-28 10:34:10 UTC
Application: dolphin (15.12.1)

Qt Version: 5.6.0
Operating System: Linux 4.4.2-1-default x86_64
Distribution (Platform): openSUSE RPMs

-- Information about the crash:
- What I was doing when the application crashed:
I was trying to delete a folder, tried again, happens every time.

- Custom settings of the application:
I am using wayland session

The crash can be reproduced every time.

-- Backtrace:
Application: Dolphin (dolphin), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f70a8a668c0 (LWP 2058))]

Thread 3 (Thread 0x7f70921cb700 (LWP 2059)):
#0  0x00007f70a830449d in poll () from /lib64/libc.so.6
#1  0x00007f709d2c5294 in ?? () from /usr/lib64/libglib-2.0.so.0
#2  0x00007f709d2c539c in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#3  0x00007f70a25a5f8b in QEventDispatcherGlib::processEvents (this=0x7f708c0008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:419
#4  0x00007f70a2551a4a in QEventLoop::exec (this=this@entry=0x7f70921cace0, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204
#5  0x00007f70a238b04c in QThread::exec (this=<optimized out>) at thread/qthread.cpp:503
#6  0x00007f70a29b56e5 in ?? () from /usr/lib64/libQt5DBus.so.5
#7  0x00007f70a238fc49 in QThreadPrivate::start (arg=0x7f70a2c23d00) at thread/qthread_unix.cpp:340
#8  0x00007f709de4f4a4 in start_thread () from /lib64/libpthread.so.0
#9  0x00007f70a830cded in clone () from /lib64/libc.so.6

Thread 2 (Thread 0x7f708839e700 (LWP 2060)):
#0  0x00007f70a830449d in poll () from /lib64/libc.so.6
#1  0x00007f709d2c5294 in ?? () from /usr/lib64/libglib-2.0.so.0
#2  0x00007f709d2c539c in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#3  0x00007f70a25a5f8b in QEventDispatcherGlib::processEvents (this=0x7f70800008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:419
#4  0x00007f70a2551a4a in QEventLoop::exec (this=this@entry=0x7f708839dd10, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204
#5  0x00007f70a238b04c in QThread::exec (this=<optimized out>) at thread/qthread.cpp:503
#6  0x00007f70a238fc49 in QThreadPrivate::start (arg=0x1a2fda0) at thread/qthread_unix.cpp:340
#7  0x00007f709de4f4a4 in start_thread () from /lib64/libpthread.so.0
#8  0x00007f70a830cded in clone () from /lib64/libc.so.6

Thread 1 (Thread 0x7f70a8a668c0 (LWP 2058)):
[KCrash Handler]
#6  QMimeData::data (this=this@entry=0x0, mimeType=...) at kernel/qmimedata.cpp:548
#7  0x00007f70a431c0f2 in KUrlMimeData::urlsFromMimeData (mimeData=0x0, decodeOptions=decodeOptions@entry=KUrlMimeData::PreferKdeUrls, metaData=metaData@entry=0x0) at /usr/src/debug/kcoreaddons-5.20.0git.20160225T010243~8e7c156/src/lib/io/kurlmimedata.cpp:74
#8  0x00007f70a6ba3c97 in removeUrlsFromClipboard (job=<optimized out>) at /usr/src/debug/kio-5.20.0git.20160224T091128~3a1f8eb/src/widgets/clipboardupdater.cpp:117
#9  KIO::ClipboardUpdater::slotResult (this=<optimized out>, job=<optimized out>) at /usr/src/debug/kio-5.20.0git.20160224T091128~3a1f8eb/src/widgets/clipboardupdater.cpp:147
#10 0x00007f70a6be7464 in KIO::ClipboardUpdater::qt_static_metacall (_o=_o@entry=0x1e4fa80, _c=_c@entry=QMetaObject::InvokeMetaMethod, _id=_id@entry=0, _a=_a@entry=0x7fffca81c000) at /usr/src/debug/kio-5.20.0git.20160224T091128~3a1f8eb/build/src/widgets/moc_clipboardupdater_p.cpp:72
#11 0x00007f70a257eac0 in QMetaObject::activate (sender=sender@entry=0x1e8ef50, signalOffset=<optimized out>, local_signal_index=local_signal_index@entry=3, argv=argv@entry=0x7fffca81c000) at kernel/qobject.cpp:3730
#12 0x00007f70a257f397 in QMetaObject::activate (sender=sender@entry=0x1e8ef50, m=m@entry=0x7f70a456f500 <KJob::staticMetaObject>, local_signal_index=local_signal_index@entry=3, argv=argv@entry=0x7fffca81c000) at kernel/qobject.cpp:3595
#13 0x00007f70a431f5a2 in KJob::result (this=this@entry=0x1e8ef50, _t1=_t1@entry=0x1e8ef50) at /usr/src/debug/kcoreaddons-5.20.0git.20160225T010243~8e7c156/build/src/lib/moc_kjob.cpp:568
#14 0x00007f70a4320d51 in KJob::finishJob (this=this@entry=0x1e8ef50, emitResult=emitResult@entry=true) at /usr/src/debug/kcoreaddons-5.20.0git.20160225T010243~8e7c156/src/lib/jobs/kjob.cpp:109
#15 0x00007f70a4320d6a in KJob::emitResult (this=this@entry=0x1e8ef50) at /usr/src/debug/kcoreaddons-5.20.0git.20160225T010243~8e7c156/src/lib/jobs/kjob.cpp:293
#16 0x00007f70a639c753 in KIO::DeleteJobPrivate::deleteNextDir (this=this@entry=0x1e64030) at /usr/src/debug/kio-5.20.0git.20160224T091128~3a1f8eb/src/core/deletejob.cpp:367
#17 0x00007f70a639d90f in KIO::DeleteJob::slotResult (this=0x1e8ef50, job=0x1e659f0) at /usr/src/debug/kio-5.20.0git.20160224T091128~3a1f8eb/src/core/deletejob.cpp:480
#18 0x00007f70a639d690 in KIO::DeleteJob::qt_static_metacall (_o=_o@entry=0x1e8ef50, _c=_c@entry=QMetaObject::InvokeMetaMethod, _id=_id@entry=5, _a=_a@entry=0x7fffca81c270) at /usr/src/debug/kio-5.20.0git.20160224T091128~3a1f8eb/build/src/core/moc_deletejob.cpp:114
#19 0x00007f70a257eac0 in QMetaObject::activate (sender=sender@entry=0x1e659f0, signalOffset=<optimized out>, local_signal_index=local_signal_index@entry=3, argv=argv@entry=0x7fffca81c270) at kernel/qobject.cpp:3730
#20 0x00007f70a257f397 in QMetaObject::activate (sender=sender@entry=0x1e659f0, m=m@entry=0x7f70a456f500 <KJob::staticMetaObject>, local_signal_index=local_signal_index@entry=3, argv=argv@entry=0x7fffca81c270) at kernel/qobject.cpp:3595
#21 0x00007f70a431f5a2 in KJob::result (this=this@entry=0x1e659f0, _t1=_t1@entry=0x1e659f0) at /usr/src/debug/kcoreaddons-5.20.0git.20160225T010243~8e7c156/build/src/lib/moc_kjob.cpp:568
#22 0x00007f70a4320d51 in KJob::finishJob (this=this@entry=0x1e659f0, emitResult=emitResult@entry=true) at /usr/src/debug/kcoreaddons-5.20.0git.20160225T010243~8e7c156/src/lib/jobs/kjob.cpp:109
#23 0x00007f70a4320d6a in KJob::emitResult (this=this@entry=0x1e659f0) at /usr/src/debug/kcoreaddons-5.20.0git.20160225T010243~8e7c156/src/lib/jobs/kjob.cpp:293
#24 0x00007f70a63f3eb2 in KIO::SimpleJob::slotFinished (this=0x1e659f0) at /usr/src/debug/kio-5.20.0git.20160224T091128~3a1f8eb/src/core/simplejob.cpp:230
#25 0x00007f70a257eac0 in QMetaObject::activate (sender=sender@entry=0x15bf020, signalOffset=<optimized out>, local_signal_index=local_signal_index@entry=4, argv=argv@entry=0x0) at kernel/qobject.cpp:3730
#26 0x00007f70a257f397 in QMetaObject::activate (sender=sender@entry=0x15bf020, m=m@entry=0x7f70a6696840 <KIO::SlaveInterface::staticMetaObject>, local_signal_index=local_signal_index@entry=4, argv=argv@entry=0x0) at kernel/qobject.cpp:3595
#27 0x00007f70a63ccdd3 in KIO::SlaveInterface::finished (this=this@entry=0x15bf020) at /usr/src/debug/kio-5.20.0git.20160224T091128~3a1f8eb/build/src/core/moc_slaveinterface.cpp:424
#28 0x00007f70a63cea31 in KIO::SlaveInterface::dispatch (this=0x15bf020, _cmd=<optimized out>, rawdata=...) at /usr/src/debug/kio-5.20.0git.20160224T091128~3a1f8eb/src/core/slaveinterface.cpp:160
#29 0x00007f70a63cd1e7 in KIO::SlaveInterface::dispatch (this=0x15bf020) at /usr/src/debug/kio-5.20.0git.20160224T091128~3a1f8eb/src/core/slaveinterface.cpp:89
#30 0x00007f70a63d2192 in KIO::Slave::gotInput (this=0x15bf020) at /usr/src/debug/kio-5.20.0git.20160224T091128~3a1f8eb/src/core/slave.cpp:393
#31 0x00007f70a6452b95 in KIO::Slave::qt_static_metacall (_o=_o@entry=0x15bf020, _c=_c@entry=QMetaObject::InvokeMetaMethod, _id=_id@entry=2, _a=_a@entry=0x7fffca81c700) at /usr/src/debug/kio-5.20.0git.20160224T091128~3a1f8eb/build/src/core/moc_slave.cpp:87
#32 0x00007f70a257eac0 in QMetaObject::activate (sender=0x1e27f10, signalOffset=<optimized out>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x0) at kernel/qobject.cpp:3730
#33 0x00007f70a257f397 in QMetaObject::activate (sender=<optimized out>, m=m@entry=0x7f70a66955a0 <KIO::Connection::staticMetaObject>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x0) at kernel/qobject.cpp:3595
#34 0x00007f70a6373d90 in KIO::Connection::readyRead (this=<optimized out>) at /usr/src/debug/kio-5.20.0git.20160224T091128~3a1f8eb/build/src/core/moc_connection_p.cpp:142
#35 KIO::ConnectionPrivate::dequeue (this=0x1a6fba0) at /usr/src/debug/kio-5.20.0git.20160224T091128~3a1f8eb/src/core/connection.cpp:45
#36 0x00007f70a257f871 in QObject::event (this=0x1e27f10, e=<optimized out>) at kernel/qobject.cpp:1256
#37 0x00007f70a370e96c in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x1e27f10, e=0x1b1f250) at kernel/qapplication.cpp:3714
#38 0x00007f70a3713846 in QApplication::notify (this=0x7fffca81ce00, receiver=0x1e27f10, e=0x1b1f250) at kernel/qapplication.cpp:3495
#39 0x00007f70a2553b68 in QCoreApplication::notifyInternal2 (receiver=0x1e27f10, event=event@entry=0x1b1f250) at kernel/qcoreapplication.cpp:1015
#40 0x00007f70a255594a in QCoreApplication::sendEvent (event=0x1b1f250, receiver=<optimized out>) at kernel/qcoreapplication.h:227
#41 QCoreApplicationPrivate::sendPostedEvents (receiver=receiver@entry=0x0, event_type=event_type@entry=0, data=0x1540a50) at kernel/qcoreapplication.cpp:1650
#42 0x00007f70a2555e08 in QCoreApplication::sendPostedEvents (receiver=receiver@entry=0x0, event_type=event_type@entry=0) at kernel/qcoreapplication.cpp:1508
#43 0x00007f70a25a5b63 in postEventSourceDispatch (s=0x15b89c0) at kernel/qeventdispatcher_glib.cpp:270
#44 0x00007f709d2c50c7 in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#45 0x00007f709d2c52f8 in ?? () from /usr/lib64/libglib-2.0.so.0
#46 0x00007f709d2c539c in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#47 0x00007f70a25a5f6f in QEventDispatcherGlib::processEvents (this=0x15b7e80, flags=...) at kernel/qeventdispatcher_glib.cpp:417
#48 0x00007f70a2551a4a in QEventLoop::exec (this=this@entry=0x7fffca81ccd0, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204
#49 0x00007f70a2559d5d in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1285
#50 0x00007f70a8627b32 in kdemain (argc=2, argv=<optimized out>) at /usr/src/debug/dolphin-15.12.60git.20160219T092318~20cb149/src/main.cpp:150
#51 0x00007f70a8243610 in __libc_start_main () from /lib64/libc.so.6
#52 0x00000000004007b9 in _start () at ../sysdeps/x86_64/start.S:118

Reported using DrKonqi
Comment 1 Patrick Silva 2016-08-20 22:35:40 UTC
I saw this crash when I tested kde neon ISO with wayland..
Comment 2 Tony 2016-09-22 21:39:31 UTC
.....Also confirming it happens on my install of Neon.... :(
Comment 3 Elvis Angelaccio 2016-10-08 14:05:28 UTC
*** Bug 368390 has been marked as a duplicate of this bug. ***
Comment 4 Elvis Angelaccio 2016-10-19 13:53:50 UTC
This should be fixed either in kio or in kcoreaddons. Moving to kio for now.
Comment 5 Elvis Angelaccio 2016-10-28 09:57:47 UTC
Git commit dd0d703e355bad9392b086f255f14ad8b7196f6c by Elvis Angelaccio.
Committed on 28/10/2016 at 09:48.
Pushed by elvisangelaccio into branch 'master'.

ClipboardUpdater: fix another crash on Wayland

QClipboard::mimeData() can return a nullptr on Wayland.

REVIEW: 129223
FIXED-IN: 5.28

M  +12   -2    src/widgets/clipboardupdater.cpp

http://commits.kde.org/kio/dd0d703e355bad9392b086f255f14ad8b7196f6c