ClipboardUpdater: fix another crash on Wayland

QClipboard::mimeData() can return a nullptr on Wayland.

REVIEW: 129223
BUG: 359883
FIXED-IN: 5.28